--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "sequelize-cli": "^6.4.1"
   }
 }
