--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.7",
     "sequelize": "^6.21.2",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.5.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.18",
     "sequelize-cli": "^6.4.1"
   }
